--- a/TP1/MiCalculadora/MiCalculadora.csproj
+++ b/TP1/MiCalculadora/MiCalculadora.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Guglielmino.Jennifer.2E.TP1\Entidades.csproj" />
+    <ProjectReference Include="..\Entidades\Entidades.csproj" />
   </ItemGroup>
 
 </Project>
